# shrike-1

./: .coverage  .gitignore  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Dockerfile.flywheel  Dockerfile.slim  LICENSE  README.md  SESSION.md  TODO.md  deploy.sh  docker-compose.yml  pyproject.toml  quality_baseline.json  test-e2e.sh
.claude/: rules.md
.github/: PULL_REQUEST_TEMPLATE.md
.pi/: AGENTS.md
data/: field_aliases.json  field_embeddings.npz
docs/: CHANGELOG.md  api.md  architecture.md  deployment.md  ml-dependencies.md  patterns.md  threat-model.md
filters/: all-pass.yaml  noise-reduction.yaml  pci-dss.yaml  security-focused.yaml
fluent-bit/: Dockerfile  README.md  fluent-bit.conf  parsers.conf
flywheel/: __init__.py  __main__.py  config.py  framework.py  github.py  issue_creator.py  state.json  state.py  tracker.py
patterns/: activemq.yaml  aide.yaml  airflow.yaml  akka.yaml  ansible.yaml  apache.yaml  app_lifecycle.yaml  arangodb.yaml  argocd.yaml  auditd.yaml  aws_cloudtrail.yaml  aws_cloudwatch.yaml  aws_guardduty.yaml  aws_vpc_flow.yaml  axios.yaml  azure_activity.yaml  azure_ad.yaml  beam.yaml  bigquery.yaml  buildkite.yaml  caddy.yaml  caffeine.yaml  caliban.yaml  carbon_black.yaml  cassandra.yaml  cats.yaml  cef_generic.yaml  cfengine.yaml  checkpoint.yaml  chef.yaml  circleci.yaml  cisco_asa.yaml  cisco_ios.yaml  cloud_auth.yaml  cloudflare.yaml  cloudflare_logs.yaml  cockroachdb.yaml  coherence.yaml  consul.yaml  cosmosdb.yaml  (+197 more)
reports/: 2026-04-05-battle-hardening-summary.md  2026-04-05-battle-hardening-test-plan.md  2026-04-05-correlation-engine-challenge.md  2026-04-05-correlation-engine-design.md  2026-04-05-enrichment-pipeline-design.md
scripts/: benchmark_async.py  benchmark_classifier.py  benchmark_pipeline.py  create_splunk_indexes.sh  download_models.sh  evaluate.py  fleet_generate.py  generate_patterns_from_tas.py  generate_synthetic.py  iterate.py  load_test.py  novel_test.py  quality_report.py  train_classifier_v4.py
shrike/: __init__.py  __main__.py  config.py  logging.py  metrics.py  pipeline.py  pipeline_async.py  runtime.py  server.py
shrike_flywheel/: __init__.py  __main__.py  config.py  config.yaml  framework.py
tests/: conftest.py  test_cli.py  (+4 more)
(+342 files in other folders)
