[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shrike"
version = "0.1.0"
description = "Any log format in, OCSF JSON out. No parsers to write."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
classifier = [
    "torch>=2.0",
    "transformers>=4.35",
    "numpy>=1.24",
]
embedding = [
    "sentence-transformers>=2.2",
    "numpy>=1.24",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio",
    "ruff>=0.1.0",
]
all = [
    "shrike[classifier,embedding,dev]",
]

[project.scripts]
shrike = "shrike.__main__:main"

[tool.setuptools.packages.find]
include = ["shrike*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "strict"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
